# hippo-host

./: README.md
hippo-programmer/: Cargo.toml  README.md  test_elf
hippo-programmer/examples/: bare_programmer.rs
hippo-programmer/src/: lib.rs  main.rs
